# tinyterp

./: .gitattributes  .gitignore  .gitmodules  .mcp.json  .mdformat.toml  AGY.md  CLAUDE.md  LICENSE  MISSION.md  Makefile  README.md  RESOURCES.md  pyproject.toml
.agy/: vendor
.githooks/: pre-commit
kb/: GAPS.md  README.md
learning-records/: 0001-gpt2-inference-environment.md  0002-transformer-forward-pass.md
notebooks/: 01_gpt2_inference.ipynb  01_gpt2_inference.md  01_microgpt-wiki.ipynb  01_microgpt-wiki.notes.md  02_induction-heads.ipynb  02_induction-heads.notes.md  02_transformer.ipynb  02_transformer.md  2026-07-03_hardware_detection.py  2026-07-04_training_data_acquisition.py  2026-07-05_tokenization.py  2026-07-07_transformer_forward_pass.py  2026-07-10_attention_induction_heads.py  2026-07-13_preference_optimization_dpo.py  microgpt-wiki.ipynb
runs/: 2026-07-03_hardware_detection.2026-07-04.md  2026-07-03_hardware_detection.2026-07-04_093535.md  2026-07-03_hardware_detection.2026-07-04_102022.md  2026-07-03_hardware_detection.2026-07-04_110220.md  2026-07-04_training_data_acquisition.2026-07-04_135538.md  2026-07-04_training_data_acquisition.2026-07-04_141916.md  2026-07-05_tokenization.2026-07-07_071414.md  2026-07-05_tokenization.2026-07-07_075459.md  2026-07-05_tokenization.2026-07-08_064045.md  2026-07-07_transformer_forward_pass.2026-07-09_075649.md  2026-07-07_transformer_forward_pass.2026-07-09_223602.md  2026-07-10_attention_induction_heads.2026-07-11_163107.md  2026-07-13_preference_optimization_dpo.2026-07-14_195743.md  (+3 more)
tinyterp/: cache.py  (+4 more)
(+67 files in other folders)
