[project]
name = "tinyterp"
version = "0.1.0"
description = "Personal, project-based mechanistic interpretability workspace."
requires-python = "==3.12.*"
dependencies = [
    "torch",
    "datasets",
    "regex>=2026.6.28",
]

[dependency-groups]
dev = [
    "ipykernel",
    "jupyter",
    "nbstripout",
]
