[project]
name = "tinyterp"
version = "0.2.0"
description = "Personal, project-based mechanistic interpretability workspace."
requires-python = "==3.12.*"
dependencies = [
    "torch",
    "datasets",
    "regex>=2026.6.28",
    "matplotlib",
]

[dependency-groups]
dev = [
    "ipykernel",
    "jupytext>=1.19.4",
    "nbconvert>=7.17.1",
]
lint = [
    "mdformat",
    "mdformat-gfm",
    "mdformat-frontmatter",
]
